package it.unisannio.gruppo3.MyTeacher;

import java.util.List;

public class AgendaLezioni {
    private List<Lezione> lezioni;

    public List<Lezione> getLezioni(){return lezioni;}

    public void setLezioni(List<Lezione> lezioni) {
        this.lezioni = lezioni;
    }
}
